[tool.poetry]
name = "mi-scale-automation"
version = "0.1.0"
description = ""
authors = ["Shahar Barkay <barkayshahar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bleak = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
